<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_unit_price"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.xinong.xnsm.pro.publish.view.SelectUnitPriceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/publish_sell_since_pijia"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/publish_sell_edit_price_hint"
        android:inputType="numberDecimal"
        android:id="@+id/unit_price" />
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/black"
        ></View>

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/publish_sell_unit"
            android:padding="15dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        ></View>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/publish_sell_edit_min_quantity_hint"
            android:inputType="number"
            android:id="@+id/min_quantity" />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black"
            ></View>

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/publish_sell_help"
            android:padding="15dp"/>
    </LinearLayout>

    <Button

        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_price_submit" />

</LinearLayout>
