<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.xinong.xnsm.pro.user.view.LoginActivity">

    <EditText
        android:hint="@string/phone_num_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:id="@+id/login_et_phone_num"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/verify_code_hint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@+id/login_et_phone_num"
        android:layout_alignLeft="@+id/login_et_phone_num"
        android:layout_alignStart="@+id/login_et_phone_num"
        android:layout_marginTop="37dp"
        android:id="@+id/login_et_verify_num"
        android:layout_alignRight="@+id/login_et_phone_num"
        android:layout_alignEnd="@+id/login_et_phone_num" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_et_verify_num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:id="@+id/login_login" />

    <TextView
        android:text="@string/verify_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_et_verify_num"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="10dp"
        android:id="@+id/login_helper" />

    <Button
        android:text="@string/send_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/login_send_verify" />
</RelativeLayout>
