<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.xinong.xnsm.pro.publish.view.PublishSellActivity">



    <LinearLayout
        android:id="@+id/activity_publish_sell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/navigation_default"></include>

        <!--货品分类-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_goods_product" />

            <TextView
                android:id="@+id/publish_sell_goods_product"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:textColor="@color/colorPrimary"
                android:text="" />
        </LinearLayout>



        <!--货品品种-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_goods_spec" />

            <TextView
                android:id="@+id/publish_sell_goods_spec"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:textColor="@color/colorPrimary"
                android:text="点击选择货品品种" />
        </LinearLayout>





        <!--货品规格-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_goods_specification" />

            <TextView
                android:id="@+id/publish_sell_goods_specification"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:clickable="true"
                android:visibility="gone"
                android:text="@string/publish_sell_select_specification"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <!--货品单价-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_goods_unit_price" />

            <TextView
                android:id="@+id/publish_sell_goods_unit_price"
                style="@style/publish_sell_text"
                android:layout_weight="3"

                />
        </LinearLayout>


        <!--供货时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_term_begin_date" />

            <TextView
                android:id="@+id/publish_sell_term_begin_date"
                style="@style/publish_sell_text"
                android:layout_weight="3" />
        </LinearLayout>

        <!--供货量-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_total_quantity" />

            <TextView
                android:id="@+id/publish_sell_total_quantity"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">
            <EditText
                android:clickable="false"
                android:gravity="center_vertical"
                android:padding="@dimen/x10"
                android:id="@+id/publish_sell_et_total_quantity"
                android:layout_width = "0dp"
                android:layout_height="wrap_content"
                android:textSize = "@dimen/x14"
                android:layout_weight="3"
                android:maxLength="7"
                android:textColor="@color/primaryGreen"
                android:hint=""
                android:background="@null"
                android:inputType="number"
                android:visibility="invisible" />

            <TextView
                android:visibility="gone"
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:drawablePadding="@dimen/x10"
                android:drawableRight="@drawable/arrow_right"
                android:layout_marginRight="@dimen/x16"
                />
            </LinearLayout>
        </LinearLayout>




        <!--是否包邮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_freight" />

            <TextView
                android:id="@+id/publish_sell_freight"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/ll_freeshipping"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:visibility="gone"
                android:gravity="center_vertical">

                <RadioGroup
                    android:id="@+id/radioGroupID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/is_freight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="是" />

                    <RadioButton
                        android:id="@+id/no_freight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="否" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>



        <!--发货地址-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_address" />

            <TextView
                android:id="@+id/publish_sell_address"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:text="@string/publish_sell_select_address"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible" />
        </LinearLayout>

        <!--原产地-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_origin" />

            <TextView
                android:id="@+id/publish_sell_origin"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:text="@string/publish_sell_select_address"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible" />
        </LinearLayout>

        <!--物流方式-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_logistic_method" />

            <TextView
                android:id="@+id/publish_sell_logistic_method"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:text="@string/publish_sell_select_logistic_method"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible" />
        </LinearLayout>

        <!--货品描述-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/publish_sell_text"
                android:layout_weight="1"
                android:text="@string/publish_sell_goods_notes" />

            <TextView
                android:id="@+id/publish_sell_goods_notes"
                style="@style/publish_sell_text"
                android:layout_weight="3"
                android:visibility="invisible"
                android:text="@string/publish_sell_select_goods_note"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <!--货品照片-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <tech.xinong.xnsm.views.GridViewForScrollView
                    android:id="@+id/publish_sell_gv_goods_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numColumns="5">
                </tech.xinong.xnsm.views.GridViewForScrollView>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:visibility="visible"
            android:clickable="false"
            android:id="@+id/publish_sell_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryGreen"
            android:layout_margin="@dimen/x8"
            android:textColor="@color/white"
            android:text="@string/confirm"/>


    </LinearLayout>
</ScrollView>