<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_white"></include>

    <LinearLayout
        android:id="@+id/ll"
        android:padding="@dimen/x8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="批发价"
            android:textSize="@dimen/x14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:paddingLeft="@dimen/x14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/publish_sell_edit_price_hint"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:background="@null"
            android:textSize="@dimen/x12"
            android:id="@+id/unit_price" />

        <TextView
            android:id="@+id/select_unit"
            android:layout_width="@dimen/x95"
            android:layout_height="wrap_content"
            android:text="@string/publish_sell_unit"
            android:paddingTop="@dimen/x15"
            android:paddingBottom="@dimen/x15"
            android:paddingLeft="@dimen/x38"
            android:drawableRight="@drawable/arrow_right"/>

    </LinearLayout>

    <include layout="@layout/line_grey"></include>


    <LinearLayout
        android:padding="@dimen/x8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x14"
            android:text="起批量"/>
        <EditText
            android:paddingLeft="@dimen/x14"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/publish_sell_edit_min_quantity_hint"
            android:maxLength="7"
            android:inputType="number"
            android:textSize="@dimen/x12"
            android:id="@+id/min_quantity" />

        <TextView
            android:id="@+id/min_quantity_str"
            android:textSize="@dimen/x12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_sell_help"
            android:padding="15dp"/>
    </LinearLayout>

    <Button
        android:layout_margin="@dimen/x8"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:background="@color/primaryGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/select_price_submit" />

</LinearLayout>