<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/brackets_default"
        android:textColor="@color/color_e14040" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/text_default"
        android:paddingLeft="5dp"
        android:text="肖志金" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="13811548666" />

    <View

        android:id="@+id/deliver"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/textView"
        android:layout_marginTop="12dp"
        android:background="@color/accentGreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/deliver">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:drawableLeft="@mipmap/my_address_edit"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/edit"></TextView>

        </LinearLayout>


        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/accentGreen">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@mipmap/my_address_default"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/set_default">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="北京市朝阳区案件是分开了骄傲的收款方"
        android:layout_below="@+id/text_default"
        android:layout_alignLeft="@+id/text_default"
        android:layout_alignStart="@+id/text_default" />


</RelativeLayout>